@@ -25,8 +25,9 @@ def usage():
     print("-i/--validPairs <list of valid Hi-C pairs as generated by HiC-Pro>")
     print("-f/--fragmentFile <Restriction fragment file (BED)>")
     print("-t/--target <Target file for viewpoints (BED)>")
+    print("[-c/--cis] <Restrict the analysis to cis contact>")
     print("[-e/--exclusion] <Size of the regions upstream/downstream the capture sites to discard>")
-    print("[-o/--output] <Output file. Default is stdout>")
+    print("[-o/--oprefix] <Output file prefix>")
     print("[-v/--verbose] <Verbose>")
     print("[-h/--help] <Help>")
     return
@@ -36,20 +37,20 @@ def get_args():
     try:
         opts, args = getopt.getopt(
             sys.argv[1:],
-            "i:f:t:e:o:vh",
+            "i:f:t:e:o:cvh",
             ["validPairsFile=",
              "fragmentsFile=",
              "targetFile=",
              "exclusionSize=",
-             "output=", 
-             "verbose", "help"])
+             "oprefix=", 
+             "cis", "verbose", "help"])
     except getopt.GetoptError:
         usage()
         sys.exit(-1)
     return opts
 
 
-def load_BED(in_file, exclusionSize=0, verbose=False):
+def load_BED(in_file, exclusionSize=0, chroms=None, verbose=False):
     """
     Read a BED file and store the intervals in a tree
 
@@ -62,25 +63,36 @@ def load_BED(in_file, exclusionSize=0, verbose=False):
     """
     x = {}
     x_ex = {}
+    skipped_chrom = []
     if verbose:
         print("## Loading BED file {} ...".format(in_file), file=sys.stderr)
     nline = 0
     with open(in_file) as bed_handle:
         for line in bed_handle:
-            if nline % 1000000 == 0 and verbose:
-                sys.stderr.write("{} million lines loaded".format(int(nline/1000000)))
+            if len(line.strip()) == 0:
+                continue
+            if nline % 1000000 == 0 and nline != 0 and verbose:
+                sys.stderr.write("{} million lines loaded\n".format(int(nline/1000000)))
             nline += 1
             bedtab = line.split("\t")
             try:
                 chromosome, start, end, name = bedtab[:4]
             except ValueError:
                 print("Warning : wrong input format in line {}. Not a BED file !?".format(nline), file=sys.stderr)
+                sys.exit(1)
                 continue
             
             # BED files are zero-based as Intervals objects
             start = int(start)  # + 1
             end = int(end)
             name = name.strip()
+
+            if chroms is not None and chromosome not in chroms:
+                if chromosome not in skipped_chrom:
+                    print("Warning : Restrict to cis interactions - {} skipped".format(chromosome), file=sys.stderr)
+                    skipped_chrom.append(chromosome)
+                continue
+            
             if chromosome in x:
                 tree = x[chromosome]
                 tree.add_interval(Interval(start, end, value={'name': name}))
@@ -103,7 +115,7 @@ def load_BED(in_file, exclusionSize=0, verbose=False):
     
     
 
-def get_overlapping_fragment(frag, chrom, pos, quiet=False):
+def get_overlapping_fragment(frag, chrom, pos, quiet=False, allow_multiple=False):
     """
     Intersect a given read with the set of restriction fragments
 
@@ -116,7 +128,7 @@ def get_overlapping_fragment(frag, chrom, pos, quiet=False):
     if chrom in frag:
         # Overlap with the start of the read (zero-based)
         ifrag = frag[chrom].find(int(pos), int(pos+1))
-        if len(ifrag) > 1:
+        if len(ifrag) > 1 and allow_multiple==False:
             if not quiet:
                 sys.stderr.write("Warning : {} fragments found for read at {}:{} -skipped {}\n".format(len(ifrag), chrom, pos, ifrag))
             return None
@@ -125,18 +137,25 @@ def get_overlapping_fragment(frag, chrom, pos, quiet=False):
                 sys.stderr.write("Warning - no fragments found for read at {}:{} -skipped\n".format(chrom, pos))
             return None
         else:
-            return ifrag[0]
+            return ifrag
     else:
         if not quiet:
             sys.stderr.write("Warning - no fragments found for read at {}:{} -skipped\n".format(chrom, pos))
         return None
 
+def init_dict():
+    repdict = {}                                                                                                                                                                     
+    repdict['c_r_counter'] = 0
+    repdict['c_c_counter'] = 0
+    repdict['exclu_counter'] = 0
+    return(repdict)
 
 if __name__ == "__main__":
     # Read command line arguments
     opts = get_args()
     verbose = False
-    output = None
+    cisOnly = False
+    oprefix = None
     exclusionSize = 0
 
     if len(opts) == 0:
@@ -155,8 +174,10 @@ if __name__ == "__main__":
             targetFile = arg
         elif opt in ("-e", "--exclusion"):
             exclusionSize = arg
-        elif opt in ("-o", "--output"):
-            output = arg
+        elif opt in ("-o", "--oprefix"):
+            oprefix = arg
+        elif opt in ("-c", "--cis"):
+            cisOnly = True
         elif opt in ("-v", "--verbose"):
             verbose = True
         else:
@@ -168,6 +189,7 @@ if __name__ == "__main__":
         sys.stderr.write("## validPairsFile={}\n".format(validPairsFile))
         sys.stderr.write("## fragmentFile={}\n".format(fragmentFile))
         sys.stderr.write("## targetFile={}\n".format(targetFile))
+        sys.stderr.write("## cisOnly={}\n".format(cisOnly))
         sys.stderr.write("## exclusionSize={}\n".format(exclusionSize))
         sys.stderr.write("## verbose={}\n".format(verbose))
 
@@ -176,9 +198,12 @@ if __name__ == "__main__":
     if verbose:
         sys.stderr.write("## Loading data ...\n")
 
-    resFrag = load_BED(fragmentFile, verbose)[0]
     (target, exclu) =  load_BED(targetFile, exclusionSize=exclusionSize, verbose=verbose)
-
+    if cisOnly:
+        resFrag = load_BED(fragmentFile, chroms=target.keys(), verbose=verbose)[0]
+    else:
+        resFrag = load_BED(fragmentFile, verbose=verbose)[0]
+        
     # Read the validPairs file
     if verbose:
         sys.stderr.write("## Opening file {} ...\n".format(validPairsFile))
@@ -186,7 +211,7 @@ if __name__ == "__main__":
     nline = 0
     repdict = {}
 
-    c_c_counter, r_r_counter, c_r_counter, ua_counter, exclu_counter = 0, 0, 0, 0, 0
+    r_r_counter, ua_counter = 0, 0
 
     with open(validPairsFile) as in_handle:
         if nline % 1000000 == 0 and nline > 0 and verbose:
@@ -201,78 +226,92 @@ if __name__ == "__main__":
                                   .Not a validPairs file !?\n".format(nline))
                 continue
 
-            r1_resfrag = None
-            r2_resfrag = None
-            reporter = None
-            reporter_chrom = None
-            capture = None
-            
+            r1_resfrag = r2_resfrag = reporter = reporter_chrom = captures = None
+ 
             ## Intersect with target
             if len(exclu) > 0:
-                r1_resfrag = get_overlapping_fragment(exclu, r1_chr, int(r1_start), quiet=True)
-                r2_resfrag = get_overlapping_fragment(exclu, r2_chr, int(r2_start), quiet=True)
+                r1_resfrag = get_overlapping_fragment(exclu, r1_chr, int(r1_start), quiet=True, allow_multiple=True)
+                r2_resfrag = get_overlapping_fragment(exclu, r2_chr, int(r2_start), quiet=True, allow_multiple=True)
                 
             if r1_resfrag is None and r2_resfrag is None:
-                r1_resfrag = get_overlapping_fragment(target, r1_chr, int(r1_start), quiet=True)
-                r2_resfrag = get_overlapping_fragment(target, r2_chr, int(r2_start), quiet=True)
+                r1_resfrag = get_overlapping_fragment(target, r1_chr, int(r1_start), quiet=True, allow_multiple=True)
+                r2_resfrag = get_overlapping_fragment(target, r2_chr, int(r2_start), quiet=True, allow_multiple=True)
 
                 if r1_resfrag is not None:
-                    capture = r1_resfrag  
+                    captures = r1_resfrag  
                 else:
-                    r1_resfrag = get_overlapping_fragment(resFrag, r1_chr, int(r1_start))
+                    r1_resfrag = get_overlapping_fragment(resFrag, r1_chr, int(r1_start), quiet=True, allow_multiple=False)
                     if  r1_resfrag is not None:
-                        reporter = r1_resfrag
+                        reporter = r1_resfrag[0]
                         reporter_chrom = r1_chr
                     else:
                         ua_counter += 1
-                        #print >> sys.stderr, "Warning : reads [", r1_chr, ":", r1_start, "] do not overlap with a capture nor a restriction fragment !"
-
                 
                 if r2_resfrag is not None:
-                    capture = r2_resfrag
+                    captures = r2_resfrag
                 else:
-                    r2_resfrag = get_overlapping_fragment(resFrag, r2_chr, int(r2_start))
+                    r2_resfrag = get_overlapping_fragment(resFrag, r2_chr, int(r2_start), quiet=True, allow_multiple=False)
                     if r2_resfrag is not None:
-                        reporter = r2_resfrag
+                        reporter = r2_resfrag[0]
                         reporter_chrom = r2_chr
                     else:
                         ua_counter += 1
-                        #print >> sys.stderr, "Warning : reads [", r2_chr, ":", r2_start, "] do not overlap with a capture nor a restriction fragment !"
             else:
-                exclu_counter += 1
-        
-            ## Counts
-            if capture is not None and reporter is not None: 
-                c_r_counter += 1
-                if not capture.value['name'] in repdict:
-                    repdict[capture.value['name']] = {}                                                                                                                     
-
-                if reporter.value['name'] in repdict[capture.value['name']]:
-                    repdict[capture.value['name']][reporter.value['name']]['count'] += 1                                                                             
+                if r1_resfrag is None:
+                    xfrag=r2_resfrag
                 else:
-                    repdict[capture.value['name']][reporter.value['name']] = {'chr':reporter_chrom, 'start':reporter.start, 'end':reporter.end, 'count':1}                  
-            elif capture is not None and reporter is None:
-                c_c_counter += 1
-            elif capture is None and reporter is not None:
+                    xfrag=r1_resfrag
+                for x in xfrag:
+                    vp = x.value['name']
+                    if not vp in repdict:
+                        repdict[vp]=init_dict()
+                    repdict[vp]['exclu_counter'] += 1
+                
+            ## Counts
+            if captures is not None and reporter is not None :
+                for capture in captures:
+                    vp=capture.value['name']
+                    if not vp in repdict:
+                        repdict[vp] = init_dict()
+                    repdict[vp]['c_r_counter'] += 1
+
+                    if reporter.value['name'] in repdict[vp]:
+                        repdict[vp][reporter.value['name']]['count'] += 1                                                                             
+                    else:
+                        repdict[vp][reporter.value['name']] = {'chr':reporter_chrom, 'start':reporter.start, 'end':reporter.end, 'count':1}
+
+            elif captures is not None and reporter is None:
+                for capture in captures:
+                    vp=capture.value['name']
+                    if not vp in repdict:
+                        repdict[vp] = init_dict()
+                    repdict[vp]['c_c_counter'] += 1
+            elif captures is None and reporter is not None:
                 r_r_counter += 1
 
     in_handle.close()
 
     ## Write
-    if output is not None:
-        sys.stdout = open(output, 'w')
-
     for k in repdict:
-        print("track type=bedGraph name='hicpro {}' description='hicpro {}' visibility=full\
-               color=200,100,0 altColor=0,100,200 priority=20".format(k, k))
+        if oprefix is None:
+            ofile=k + ".bedgraph"
+        else:
+            ofile=oprefix + "_" + k + ".bedgraph"
+        print("Writing in " + k + "_viewpoint.bedgraph")
+        f = open(ofile, 'w')
+        
+        f.write("track type=bedGraph name='hicpro {}' description='hicpro {}' visibility=full color=200,100,0 altColor=0,100,200 priority=20\n".format(k, k))
         for key, value in repdict[k].items():
-            print("{}\t{}\t{}\t{}".format(value['chr'], str(value['start']),\
-                                          str(value['end']), str(value['count'])))
+            if 'chr' in key:
+                f.write("{}\t{}\t{}\t{}\n".format(value['chr'], str(value['start']),\
+                                                str(value['end']), str(value['count'])))
 
 
-    ## stats
-    sys.stderr.write("CAP-REP read pairs = {}\n".format(c_r_counter))
-    sys.stderr.write("CAP-CAP read pairs = {}\n".format(c_c_counter))
-    sys.stderr.write("REP-REP read pairs = {}\n".format(r_r_counter))
-    sys.stderr.write("Excluded reads = {}\n".format(exclu_counter))
-    sys.stderr.write("UA reads = {}\n".format(ua_counter))
+        ## stats
+        sys.stderr.write("## [{}] CAP-REP read pairs = {}\n".format(k, repdict[k]['c_r_counter']))
+        sys.stderr.write("## [{}] CAP-CAP read pairs = {}\n".format(k, repdict[k]['c_c_counter']))
+        sys.stderr.write("## [{}] Excluded reads = {}\n".format(k, repdict[k]['exclu_counter']))
+        f.close()
+
+    sys.stderr.write("## REP-REP read pairs = {}\n".format(r_r_counter))
+    sys.stderr.write("## UA reads = {}\n".format(ua_counter))
